# epub-dual-language

./: .gitignore  README.md  environment.yml  pyproject.toml
.github/workflows/: release.yml
epub_dual_language/: __init__.py  chunking.py  cli.py  epub_processor.py  openrouter.py
tests/: test_chunking.py  test_cli.py  test_openrouter.py
